# okta-api

./: .flake8  .gitignore  DOTENVRC  Justfile  Makefile  README.md  justfile  pyproject.toml  x.sh
.devcontainer/: Dockerfile
leftovers/: x.sh
scripts/: check_coverage_config.py
src/main/python/okta_api_script/: cli.py  main.py
src/main/python/services/: projects.py  resource_groups.py
src/okta_api/: cli.py
src/okta_api_script/: __init__.py  cli.py  main.py
src/okta_opa/: cli.py  main.py
src/okta_opa/services/: group.py  service_token.py
src/services/: enrollment.py  group.py  projects.py  resource_groups.py  service_token.py
src/test/python/: test_main.py
tests/: __init__.py  test_cli.py  test_group.py  test_main.py  test_services.py
