[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project configuration variables
[tool.project-config]
min_coverage_percentage = 65

[project]
name = "okta-api"
version = "0.1.0"
description = "Python script for working with Okta APIs"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Mykel Alvis", email = "malvis@lynker.com"},
]
keywords = ["api", "requests", "okta"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/okta-api-script"
Repository = "https://github.com/yourusername/okta-api-script"
Issues = "https://github.com/yourusername/okta-api-script/issues"

[project.scripts]
okta-script = "okta_api_script.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/okta_api_script"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Allow Any returns for JSON responses since we can't predict the structure
[[tool.mypy.overrides]]
module = "okta_api_script.main"
warn_return_any = false

[tool.pytest.ini_options]
minversion = "6.0"
# Coverage threshold defined in [tool.project-config] section above (65%)
addopts = "-ra -q --cov=src/okta_api_script --cov-report=term-missing --cov-fail-under=65"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["src/okta_api_script"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ .__main__.:",
]
# Coverage threshold defined in [tool.project-config] section above (65%)
fail_under = 65
show_missing = true
