[project]
name = "okta-opa"
version = "0.1.2"
description = "Python script for working with Okta APIs, esp OPA"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    {name = "Lynker Pypi Admin", email = "pypi@lynker.com"},
    {name = "Mykel Alvis", email = "malvis@lynker.com"}
]

dependencies = [
    "requests>=2.32.0",
    "click>=8.0.0",
]


keywords = ["api", "requests", "okta"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage[toml]>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/LynkerIntel/okta-opa-script"
Repository = "https://github.com/LynkerIntel/okta-opa-script"
Issues = "https://github.com/LynkerIntel/okta-opa-script/issues"

[project.scripts]
okta-opa-cli = "okta_opa.cli:cli"


[tool.ruff.lint.isort]
known-first-party = ["okta_opa"]

[build-system]
#requires = ["hatchling >= 1.27.2"]
#build-backend = "hatchling.build"
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

#[tool.hatch.version]
#path = "src/cs_image_action/__about__.py"

#[tool.hatch.build.targets.wheel]
#packages = ["src"]
#only-packages = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 92
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=95",
    "-v",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src"
files = ["src"]
exclude = []
namespace_packages = true

[tool.coverage.run]
source = ["src"]
omit = ["*/test/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true

